--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "globals": "^16.5.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.36.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^9.0.0",
     "vite": "^7.2.4"
   }
 }
